# rs-embedded-micro-webgl2-engine

./: .gitignore  Cargo.toml  README.md  build.bat  design.canvas  index.html  release.bat  run.bat
.obsidian/: workspace.json
assets/models/: Drill.glb  Forklift.glb  bishop.glb  castle.glb  king.glb  knifing_goose.glb  knight.glb  pawn.glb  queen.glb  rook.glb  swordfish.glb  torus.glb
codemirror/mode/: meta.js
codemirror/mode/rhai/: rhai.js
scripts/: chess.rhai
src/: canvas.rs  fetch.rs  lib.rs  load_texture_img.rs
src/app/: mod.rs  ray.rs
src/app/assets/: mark_requirements_mesh.rs  mark_requirements_trait.rs  mark_requirements_water.rs  mod.rs
src/app/control/: from_rhai.rs  mesh_from_rhai.rs  mod.rs
src/app/render/: mod.rs  render_meshes.rs  render_trait.rs
src/app/render/material/: mat.rs  mat_albedo.rs  mat_water.rs  mod.rs
src/app/render/mesh/: cube.rs  gltf_mesh.rs  mod.rs  textured_quad.rs  water_tile.rs
src/app/render/rgl/: framebuffer.rs  mod.rs  renderbuffer.rs  texture.rs  uniform_buffer.rs
src/app/store/: camera.rs  display.rs  entity.rs  keyboard.rs  mesh.rs  mod.rs  water.rs
src/render/: framebuffer.rs  mod.rs  render_meshes.rs  render_trait.rs  texture_unit.rs  textured_quad.rs  water_tile.rs
src/render/material/: albedo.rs  mat_albedo.rs  mat_water.rs  mod.rs
src/render/mesh/: gltf_mesh.rs  mod.rs  textured_quad.rs  water_tile.rs
src/render/rgl/: framebuffer.rs  mod.rs  texture.rs  uniform_buffer.rs  vao.rs
src/render/rgl/shader/: mesh-non-skinned-fragment.glsl  mesh-non-skinned-vertex.glsl  mesh-skinned-vertex.glsl  (+5 more)
(+5 files in other folders)
