[package]
name = "webgl-renderer"
version = "0.1.0"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>", "Maxwell Pettett"]
edition = "2021" 

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = "=1.3.3" 
console_error_panic_hook = "=0.1.7"
js-sys = "=0.3.61"
nalgebra = "=0.32.2"
wasm-bindgen = "=0.2.84" 
gltf="1.1.0" 
itertools="0.10.5" 
wasm-bindgen-futures = "0.4.34"
log = "0.4.17"
wasm-logger = "0.2.0"


[dependencies.rhai]
version="1.13.0"
features=["no_module", "wasm-bindgen", "only_i32"]

[dependencies.web-sys]
version = "=0.3.61"
features = [  
  'Document',
  'Element',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Event', 
  'EventTarget',
  'HtmlCanvasElement', 
  'HtmlImageElement', 
  'InputEvent',
  'MouseEvent',
  'Node',
  'Touch',
  'TouchEvent',
  'TouchList',
  'WebGlBuffer',
  'WebGlFramebuffer',
  'WebGlProgram',
  'WebGlRenderbuffer',
  'WebGl2RenderingContext',
  'WebGlShader',
  'WebGlTexture', 
  'WebGlUniformLocation',
  'WebGlVertexArrayObject',
  'WheelEvent',
  'Window', 
]

[profile.release]
lto = true
